--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,7 +113,7 @@ body.appear {
 
 header .header, footer .footer {
   opacity: 0;
-  transition: opacity 0.3s ease;
+  transition: opacity 0s ease;
 }
 
 header .header[data-block-status="loaded"], footer .footer[data-block-status="loaded"] {
@@ -473,13 +473,13 @@ main .section:not(.hero-container) {
 }
 
 @media (width >= 1024px) {
-  header {
+  .homepage header {
     height: var(--header-height-desktop);
     min-height: var(--header-height-desktop); /* Ensure minimum height is maintained */
   }
 
   /* Apply larger height when breadcrumbs are present */
-  header:has(.breadcrumbs) {
+  header {
     height: var(--header-height-desktop-with-breadcrumbs);
     min-height: var(--header-height-desktop-with-breadcrumbs);
   }
